# turbo-whisper

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: signal-ready.sh
docs/: INSTALLATION.adoc  PACKAGE.adoc  PLAN-ISSUE-1-CLAUDE-CODE-INTEGRATION.md  SOLUTION_DESIGN.adoc  TROUBLESHOOTING.adoc
packaging/: turbo-whisper.desktop
packaging/aur/: .SRCINFO  PKGBUILD
packaging/debian/: changelog  control  copyright  rules
src/turbo_whisper/: __init__.py  api.py  config.py  hotkey.py  icons.py  integration_server.py  main.py  recorder.py  typer.py  waveform.py  window.py
