[project]
name = "turbo-whisper"
version = "1.0.2"
description = "SuperWhisper-like voice dictation with waveform UI - cross-platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "KnowAll AI", email = "ben.weeks@outlook.com" }
]
keywords = ["voice", "dictation", "whisper", "speech-to-text", "linux", "windows", "macos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "PyQt6>=6.4.0",
    "pyaudio>=0.2.13",
    "numpy>=1.24.0",
    "httpx>=0.24.0",
    "pynput>=1.7.6",
    "python-xlib>=0.33",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
windows = [
    "pyperclip>=1.8.0",
]
linux = [
    "evdev>=1.6.0",
]
wayland = [
    "dbus-python>=1.3.0",
    "PyGObject>=3.42.0",
    "evdev>=1.6.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
turbo-whisper = "turbo_whisper.main:main"

[project.urls]
Homepage = "https://github.com/knowall-ai/turbo-whisper"
Repository = "https://github.com/knowall-ai/turbo-whisper"
Issues = "https://github.com/knowall-ai/turbo-whisper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/turbo_whisper"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/turbo_whisper/icons.py" = ["E501"]  # SVG strings are naturally long
